Added current functionality
Added missing functionality from yesterday.

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
 
     <p>Advanced Setup</p>
     <div id="advancedSetup">
-        <p>AutoStart: <input type="checkbox" id="autoStart"/></p>
-        <p>AutoRestart: <input type="checkbox" id="autoRestart"/></p>
+        <p>AutoStart: <input type="checkbox" id="autoStart" checked/></p>
+        <p>AutoRestart: <input type="checkbox" id="autoRestart" checked/></p>
 
         <p>DisplayMode:
             <select id="displayMode">
