--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,9 @@
         >. Please consider to follow me on
         <a href="https://twitch.tv/sillysoon" target="_blank">Twitch</a>.
       </p>
+      <p>
+        If you need any support visit my <a href="https://discord.gg/SxwuKcmYbx" target="_blank">Discord</a>.
+      </p>
     </div>
 
     <div class="container py-4">
@@ -111,6 +114,18 @@
             <p>
               randomSpawnTimeMax:
               <input type="number" id="randomSpawnTimeMax" /> seconds
+            </p>
+
+            <p>
+              Streamelements Reward: <input type="checkbox" id="pointReward" />
+            </p>
+            <p>
+              Add-Points Command:
+              <input type="text" id="pointRewardCommand"/>
+            </p>
+            <p>
+              Points Amount:
+              <input type="number" id="pointRewardAmount" /> points
             </p>
           </div>
         </div>
