Option for Pixelart

--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,7 @@
               DisplayMode:
               <select id="displayMode">
                 <option value="original">Original</option>
+                <option value="pixelart">Pixelart (Experimental)</option>
                 <option value="animated">Animated (Experimental)</option>
               </select>
             </p>
