feat: added showdown

--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,7 @@
                 <option value="original">Original</option>
                 <option value="pixelart">Pixelart (Experimental)</option>
                 <option value="animated">Animated (Experimental)</option>
+                <option value="showdown">Showdown (Experimental)</option>
               </select>
             </p>
 
